--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
     </script>
 
-    <!-- ================= CSS ORIGINAL ================= -->
+    <!-- ================= CSS original ================= -->
     <style>
         /* ===== Estilos Gerais ===== */
         body {
@@ -227,7 +227,21 @@
         }
     </style>
 
-    <!-- ============= NOVO: CSS responsivo da home ============= -->
+    <!-- ============= Ajuste mobile: texto abaixo da imagem ============= -->
+    <style>
+      @media (max-width: 768px) {
+        .intro-block {
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+        }
+        .intro-text {
+          margin-top: 24px;
+        }
+      }
+    </style>
+
+    <!-- ============= CSS responsivo extra (disciplinas/estrelas) ============= -->
     <link rel="stylesheet" href="home-style-update.css">
 </head>
 <body>
