--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
     </script>
 
-    <!-- ================= CSS original ================= -->
+    <!-- ================= CSS base ================= -->
     <style>
         /* ===== Estilos Gerais ===== */
         body {
@@ -98,17 +98,26 @@
         .stat.green { color: #32cd32; }
         .stat.orange { color: #ff4500; }
         .stat.red { color: #ff0000; }
+        /* ===== Intro: mago + texto ===== */
         .intro-block {
             display: flex;
+            justify-content: center;   /* centraliza horizontalmente */
             align-items: flex-start;
             margin-bottom: 45px;
             width: 100%;
+            box-sizing: border-box;
+            padding: 0 16px;
         }
         .intro-img {
             width: 240px;
             height: auto;
             margin-right: 24px;
             border-radius: 8px;
+            flex-shrink: 0;
+        }
+        .intro-text {
+            flex: 1;
+            min-width: 0;
         }
         .intro-text p {
             margin: 12px 0;
@@ -117,23 +126,30 @@
             color: #cccccc;
             line-height: 1.6;
         }
-        /* ===== Ajuste para alinhar estrelas ===== */
+        /* ===== Disciplinas + estrelas ===== */
         .metacog-lines {
-            display: block;
+            display: flex;            /* agora flex para centralizar filhos */
             flex-direction: column;
+            align-items: center;      /* centraliza linhas */
             width: 100%;
             margin-bottom: 32px;
+            box-sizing: border-box;
+            padding: 0 16px;
         }
         .disc-line {
             display: grid;
             grid-template-columns: 220px auto;
             column-gap: 8px;
             align-items: center;
+            justify-content: center;  /* centraliza grade */
             margin-bottom: 8px;
+            width: auto;              /* encolhe ao conteúdo */
         }
         .stars-container {
             display: flex;
-            gap: 0px;
+            flex-wrap: wrap;          /* quebra se precisar */
+            justify-content: center;  /* centraliza linhas */
+            gap: 4px;
         }
         .disc-btn {
             width: 200px;
@@ -234,11 +250,14 @@
           align-items: center;
           text-align: center;
         }
+        .intro-img {
+          margin: 0 0 24px 0;      /* margem somente embaixo no mobile */
+        }
         .intro-text {
-          margin-top: 24px;
+          margin-top: 0;
         }
 
-        /* Disciplinas empilhadas com estrelas embaixo quebrando linha */
+        /* Disciplinas empilhadas com estrelas abaixo */
         .disc-line {
           display: flex;
           flex-direction: column;
@@ -250,114 +269,14 @@
           margin: 0;
         }
         .stars-container {
-            display: flex;
-            gap: 0px;
-        }
-        .disc-btn {
-            width: 200px;
-            height: 33px;
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            border-radius: 4px;
-            color: #000;
-            font-weight: bold;
-            font-size: 18px;
-            padding: 0;
-            box-sizing: border-box;
-            margin-right: 0;
-        }
-        .disc-btn.biologia   { background: #4E9302; }
-        .disc-btn.quimica    { background: #1CC9E7; }
-        .disc-btn.fisica     { background: #CA09EE; }
-        .disc-btn.matematica { background: #F9D01A; }
-        /* ===== Estilos para exibir número dentro da estrela ===== */
-        .star {
-            position: relative;
-            display: inline-block;
-            cursor: pointer;
-            margin: 0;
-        }
-        .star::before {
-            content: '★';
-            font-size: 35px;
-            display: block;
-            text-align: center;
-            pointer-events: none;
-        }
-        .star .star-index {
-            position: absolute;
-            top: 55%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            font-size: 0.4em;
-            color: #ffffff;
-            pointer-events: none;
-        }
-        .state-0 { color: black; }
-        .state-1 { color: #ff0000; }
-        .state-2 { color: #ff580a; }
-        .state-3 { color: #32cd32; }
-        .state-4 { color: #1e90ff; }
-
-        /* ===== Visualizador de PDF ===== */
-        #pdfViewerContainer {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: rgba(0,0,0,0.9);
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            z-index: 1000;
-            overflow-y: auto;
-        }
-        #pdfCanvas {
-            max-width: 100%;
-            max-height: 80%;
-            box-shadow: 0 0 10px rgba(0,0,0,0.5);
-        }
-        #closePdfBtn {
-            position: fixed;
-            top: 24px;
-            right: 24px;
-            width: 44px;
-            height: 44px;
-            border: 2px solid #ffffff33;
-            border-radius: 50%;
-            background: rgba(30,30,30,0.75);
-            backdrop-filter: blur(6px);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 20px;
-            color: #fff;
-            cursor: pointer;
-            transition: background .25s, transform .25s;
-            z-index: 2000;
-        }
-        #closePdfBtn:hover {
-            background: rgba(30,30,30,0.9);
-            transform: scale(1.1);
-        }
-    </style>
-
-    <!-- ============= Ajuste mobile: texto abaixo da imagem ============= -->
-    <style>
-      @media (max-width: 768px) {
-        .intro-block {
-          flex-direction: column;
-          align-items: center;
-          text-align: center;
-        }
-        .intro-text {
-          margin-top: 24px;
+          flex-wrap: wrap;
+          justify-content: center;
+          gap: 4px;
         }
       }
     </style>
 
-    <!-- ============= CSS responsivo extra (disciplinas/estrelas) ============= -->
+    <!-- ============= CSS responsivo extra (pode manter) ============= -->
     <link rel="stylesheet" href="home-style-update.css">
 </head>
 <body>
