--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             align-items: center;
             margin-bottom: 8px;
             width: 100%;
-            max-width: 600px;
+            max-width: 800px;
         }
         .state-box {
             width: 24px;
@@ -90,6 +90,20 @@
             cursor: pointer;
             font-size: 18px;
         }
+        /* ===== NOVO: Caixa de comentário ===== */
+        .comment-input {
+            background: #1e1e1e;
+            color: #f0f0f0;
+            border: 1px solid #444;
+            padding: 6px 8px;
+            border-radius: 4px;
+            margin-left: 8px;
+            width: 240px;
+            box-sizing: border-box;
+            font-size: 14px;
+        }
+        .comment-input::placeholder { color: #888; }
+
         .stat {
             margin-bottom: 16px;
             font-weight: bold;
@@ -179,9 +193,9 @@
             pointer-events: none;
         }
         .state-0 { color: black; }
-        .state-1 { color: #ff0000; }
-        .state-2 { color: #ff580a; }
-        .state-3 { color: #32cd32; }
+        .state-1 { color: #32cd32; }
+        .state-2 { color: #ff0000; }
+        .state-3 { color: #ff580a; }
         .state-4 { color: #1e90ff; }
 
         /* ===== Visualizador de PDF ===== */
@@ -237,6 +251,12 @@
         }
         .intro-text {
           margin-top: 24px;
+        }
+
+        /* comentário ocupa 100% no mobile */
+        .comment-input {
+          width: 100%;
+          margin: 8px 0 0 0;
         }
       }
     </style>
@@ -323,7 +343,11 @@
     const data = {};
     for (let i = 0; i < localStorage.length; i++) {
       const key = localStorage.key(i);
-      if (key.startsWith('star_') || /^\w+_\d+_\d+$/.test(key)) {
+      if (
+        key.startsWith('star_') ||
+        key.startsWith('comment_') ||                        // NOVO: exporta comentários
+        /^\w+_\d+_\d+$/.test(key)
+      ) {
         data[key] = localStorage.getItem(key);
       }
     }
