--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
     const txt = document.createElement('div'); txt.className = 'intro-text';
     txt.innerHTML = `
       <p>Seja bem‑vindo(a), jovem aprendiz do conhecimento!</p><br>
-      <p>Eu sou <strong>Arcano Newtonius</strong>, o Mago das Ciências da Natureza e da Matemática!<br>
+      <p>Eu1 sou <strong>Arcano Newtonius</strong>, o Mago das Ciências da Natureza e da Matemática!<br>
       Guardião dos segredos do universo, mestre dos elementos e das equações, e teu guia nesta jornada rumo à aprovação em Medicina no ENEM.</p><br>
       <p>Cumpre tuas missões, conquista tuas estrelas e avança de nível até alcançar o topo da montanha: a vaga dos teus sonhos!</p>`;
     intro.appendChild(txt);
