--- a/index.html
+++ b/index.html
@@ -328,10 +328,10 @@
   <script>
     /* ---------- CONFIG ---------- */
     const SUBJECT_TOTALS = {
-      Biologia: 26,
-      Química: 24,
-      Física: 20,
-      Matemática: 22,
+      Biologia: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26],
+      Química: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24],
+      Física: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20],
+      Matemática: [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22]
     };
 
     /* ---------- Build banco ---------- */
