--- a/index.html
+++ b/index.html
@@ -261,21 +261,44 @@
       transform: scale(1.1);
     }
 
-    /* ===== Mobile ajustes ===== */
-    @media (max-width: 768px) {
-      .intro-block {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-      .intro-text {
-        margin-top: 24px;
-      }
-      .comment-input {
-        width: 100%;
-        margin: 8px 0 0 0;
-      }
-    }
+/* ===== Mobile (até 768 px) ===== */
+@media (max-width: 768px) {
+
+  /* Empilha os elementos da questão */
+  .question-row {
+    flex-direction: column;      /* vira coluna      */
+    align-items: stretch;        /* ocupa toda largura */
+    gap: 8px;                    /* respirável        */
+  }
+
+  /* ---------- Botões ---------- */
+  .question-row > button {       /* botão da questão  */
+    width: 100%;
+    font-size: 15px;
+  }
+  .question-row .small-btn {     /* botão Gabarito    */
+    flex: 0 0 96px;              /* largura fixa menor */
+    padding: 6px 8px;
+    font-size: 13px;
+    align-self: flex-start;      /* cola em cima       */
+  }
+
+  /* ---------- Caixa ✓ / ✗ ---------- */
+  .state-box {
+    align-self: flex-start;      /* mantem perto do topo   */
+    margin: 0;                   /* tira margin lateral    */
+    width: 28px;
+    height: 28px;
+    font-size: 16px;
+  }
+
+  /* ---------- Comentário ---------- */
+  .comment-input {
+    width: 100%;
+    margin: 0;                   /* já tem gap no row */
+    font-size: 13px;
+  }
+}
   </style>
 
   <!-- CSS externo (se houver) -->
