Supostamente Apenas Retornando

--- a/index.html
+++ b/index.html
@@ -261,44 +261,21 @@
       transform: scale(1.1);
     }
 
-/* ===== Mobile (até 768 px) ===== */
-@media (max-width: 768px) {
-
-  /* Empilha os elementos da questão */
-  .question-row {
-    flex-direction: column;      /* vira coluna      */
-    align-items: stretch;        /* ocupa toda largura */
-    gap: 8px;                    /* respirável        */
-  }
-
-  /* ---------- Botões ---------- */
-  .question-row > button {       /* botão da questão  */
-    width: 100%;
-    font-size: 15px;
-  }
-  .question-row .small-btn {     /* botão Gabarito    */
-    flex: 0 0 96px;              /* largura fixa menor */
-    padding: 6px 8px;
-    font-size: 13px;
-    align-self: flex-start;      /* cola em cima       */
-  }
-
-  /* ---------- Caixa ✓ / ✗ ---------- */
-  .state-box {
-    align-self: flex-start;      /* mantem perto do topo   */
-    margin: 0;                   /* tira margin lateral    */
-    width: 28px;
-    height: 28px;
-    font-size: 16px;
-  }
-
-  /* ---------- Comentário ---------- */
-  .comment-input {
-    width: 100%;
-    margin: 0;                   /* já tem gap no row */
-    font-size: 13px;
-  }
-}
+    /* ===== Mobile ajustes ===== */
+    @media (max-width: 768px) {
+      .intro-block {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+      }
+      .intro-text {
+        margin-top: 24px;
+      }
+      .comment-input {
+        width: 100%;
+        margin: 8px 0 0 0;
+      }
+    }
   </style>
 
   <!-- CSS externo (se houver) -->
@@ -348,7 +325,7 @@
   function getFriendlyName(disc, sub) {
     const list = SUBJECT_NAMES[disc] || [];
     const idx  = parseInt(sub, 10) - 1;   // "01" → 0
-    return list[idx] ?? `Assunto ${sub}`;
+    return list[idx] ?? Assunto ${sub};
   }
 
   /* ---------- Build banco ---------- */
@@ -472,7 +449,7 @@
 
     const txt = document.createElement("div");
     txt.className = "intro-text";
-    txt.innerHTML = `
+    txt.innerHTML = 
       <p>Seja bem-vindo(a), jovem aprendiz do conhecimento!</p><br />
       <p>
         Eu sou <strong>Arcano Newtonius</strong>, o Mago das Ciências da Natureza e da
@@ -482,7 +459,7 @@
       <p>
         Cumpre tuas missões, conquista tuas estrelas e avança de nível até alcançar o topo da
         montanha: a vaga dos teus sonhos!
-      </p>`;
+      </p>;
     intro.appendChild(txt);
     app.appendChild(intro);
 
@@ -510,7 +487,7 @@
         idx.textContent = sub;
         star.appendChild(idx);
 
-        const key = `star_${disc}_${sub}`;
+        const key = star_${disc}_${sub};
         let st = parseInt(localStorage.getItem(key), 10) || 0;
         updateStar(star, st);
 
@@ -558,13 +535,13 @@
         const qs = questoesData[disc][sub] || [];
         total += qs.length;
         qs.forEach((_, i) => {
-          const st = parseInt(localStorage.getItem(`${disc}_${sub}_${i}`), 10);
+          const st = parseInt(localStorage.getItem(${disc}_${sub}_${i}), 10);
           if (st === 1) correct++;
           if (st === 1 || st === 2) answered++;
         });
       });
       const pct = answered ? (correct / answered) * 100 : 0;
-      statDiv.textContent = `Acertos: ${correct}/${answered} [${total}] (${pct.toFixed(1)}%)`;
+      statDiv.textContent = Acertos: ${correct}/${answered} [${total}] (${pct.toFixed(1)}%);
       statDiv.className =
         answered === 0
           ? "stat neutral"
@@ -587,7 +564,7 @@
   function showQuestions(disc, sub) {
     currentDisc = disc;
     currentSub = sub;
-    updateHeader(true, `${disc} - ${getFriendlyName(disc, sub)}`);
+    updateHeader(true, ${disc} - ${getFriendlyName(disc, sub)});
     clear();
 
     const statDiv = document.createElement("div");
@@ -600,12 +577,12 @@
       let correct = 0,
         answered = 0;
       qs.forEach((_, i) => {
-        const st = parseInt(localStorage.getItem(`${disc}_${sub}_${i}`), 10);
+        const st = parseInt(localStorage.getItem(${disc}_${sub}_${i}), 10);
         if (st === 1) correct++;
         if (st === 1 || st === 2) answered++;
       });
       const pct = answered ? (correct / answered) * 100 : 0;
-      statDiv.textContent = `Acertos: ${correct}/${answered} [${total}] (${pct.toFixed(1)}%)`;
+      statDiv.textContent = Acertos: ${correct}/${answered} [${total}] (${pct.toFixed(1)}%);
       statDiv.className =
         answered === 0
           ? "stat neutral"
@@ -632,7 +609,7 @@
       row.appendChild(gBtn);
 
       // caixa acerto/erro
-      const key = `${disc}_${sub}_${idx}`;
+      const key = ${disc}_${sub}_${idx};
       const box = document.createElement("span");
       box.className = "state-box";
       let st = parseInt(localStorage.getItem(key), 10) || 0;
@@ -650,7 +627,7 @@
       row.appendChild(box);
 
       // ------ Comentário ------
-      const commentKey = `comment_${disc}_${sub}_${idx}`;
+      const commentKey = comment_${disc}_${sub}_${idx};
       const commentInput = document.createElement("input");
       commentInput.type = "text";
       commentInput.placeholder = "Comentário (opcional)";
